2006-08-01  Roger Leigh  <rleigh@debian.org>

	* test/Makefile.am (TESTS): Add sbuild-regex.

	* test/sbuild-regex.cc: New file.  sbuild::regex unit tests.

	* sbuild/Makefile.am
	(sbuild_public_h_sources): Add sbuild-regex.h.

	* sbuild/sbuild-regex.h: New file.  POSIX extended regular
	expression class, based on boost::regex.  It supports input and
	output from streams.

2006-08-01  Luk Claes  <luk@debian.org>

	* po/cs.po: Update Czech translation.

2006-07-31  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-chroot-config.cc: Use "by", rather than "with"
	when referring to chroot name.

2006-07-31  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.1.in, dchroot/dchroot.1.in: Document mips and
	mipsel personality bug.

2006-07-31  Roger Leigh  <rleigh@debian.org>

	* schroot/setup/50chrootname: Name in log message always matches
	debian_chroot chrootname.

2006-07-30  Roger Leigh  <rleigh@debian.org>

	* Merge from schroot-1.0 branch.

	* Update translator comments.

	* Add sbuild/sbuild-types.cc.

2006-07-30  Roger Leigh  <rleigh@debian.org>

	* po/LINGUAS: Add cs.

2006-07-30  Luk Claes  <luk@debian.org>

	* po/cs.po: Add Czech translation.

2006-07-30  Roger Leigh  <rleigh@debian.org>

	* Merge translations from schroot-1.0 branch.

2006-07-30  Roger Leigh  <rleigh@debian.org>

	* Merge from schroot-1.0 branch.

	* configure.ac: Fix --enable-dchroot-dsa help string.  Thanks to
	Jens Seidel <jensseidel@users.sf.net> for reporting this.

	* schroot/schroot-options-base.cc
	(check_actions): Clarify error message when starting a session,
	and the number of chroots specified is not 1.  Thanks to Jens
	Seidel <jensseidel@users.sf.net> for reporting this.

	* schroot/schroot-base-main.cc
	(action_version): Fix translator comment.  Thanks to Jens Seidel
	<jensseidel@users.sf.net> for reporting this.

	* sbuild/Makefile.am
	(sbuild_public_cc_sources): Add sbuild-types.cc.

	* sbuild/sbuild-types.cc: New file.